WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117395
[CSSRegions] ASSERTION FAILED: roundedIntPoint(rendererMappedResult) == roundedIntPoint(result) in RenderGeometryMap::mapToContainer
https://bugs.webkit.org/show_bug.cgi?id=117395
Summary
[CSSRegions] ASSERTION FAILED: roundedIntPoint(rendererMappedResult) == round...
Mihnea Ovidenie
Reported
2013-06-10 00:58:29 PDT
RenderNamedFlowThread layers should not be composited and their collected children layers should be inspected by means of their associated regions.
Attachments
Patch
(4.53 KB, patch)
2013-06-10 01:03 PDT
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
Patch 2
(5.38 KB, patch)
2013-06-10 03:38 PDT
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.68 KB, patch)
2013-06-10 08:56 PDT
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Mihnea Ovidenie
Comment 1
2013-06-10 01:03:00 PDT
Created
attachment 204140
[details]
Patch
WebKit Commit Bot
Comment 2
2013-06-10 01:05:07 PDT
Attachment 204140
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast/regions/assert-flow-thread-compositing-expected.txt', u'LayoutTests/fast/regions/assert-flow-thread-compositing.html', u'Source/WebCore/ChangeLog', u'Source/WebCore/rendering/RenderLayerCompositor.cpp']" exit_code: 1 Source/WebCore/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mihnea Ovidenie
Comment 3
2013-06-10 03:38:30 PDT
Created
attachment 204150
[details]
Patch 2 Add missing bail-out in RenderLayerCompositor::rebuildCompositingLayerTree
Mihnea Ovidenie
Comment 4
2013-06-10 04:49:15 PDT
***
Bug 117404
has been marked as a duplicate of this bug. ***
Alexandru Chiculita
Comment 5
2013-06-10 08:16:22 PDT
Comment on
attachment 204150
[details]
Patch 2 View in context:
https://bugs.webkit.org/attachment.cgi?id=204150&action=review
r=me, but we should also add a bug to fix the initial assert when proper compositing is implemented.
> LayoutTests/fast/regions/assert-flow-thread-compositing.html:5 > + .transformed { width: 50px; height: 50px; background-color: salmon; -webkit-transform: translateZ(0px); border: 1px solid black; }
nit: just use green instead of salmon :)
> Source/WebCore/rendering/RenderLayerCompositor.cpp:926 > + layer->setHasCompositingDescendant(false);
nit: I think you don't need this, it's false by default. We are going to fix it for 84900 anyway.
Mihnea Ovidenie
Comment 6
2013-06-10 08:56:45 PDT
Created
attachment 204167
[details]
Patch for landing
WebKit Commit Bot
Comment 7
2013-06-10 09:27:51 PDT
Comment on
attachment 204167
[details]
Patch for landing Clearing flags on attachment: 204167 Committed
r151396
: <
http://trac.webkit.org/changeset/151396
>
WebKit Commit Bot
Comment 8
2013-06-10 09:27:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug