[CSSRegions] ASSERTION FAILED: roundedIntPoint(rendererMappedResult) == roundedIntPoint(result) in RenderGeometryMap::mapToContainer https://bugs.webkit.org/show_bug.cgi?id=117395

Reviewed by Alexandru Chiculita.

Source/WebCore:

Test: fast/regions/assert-flow-thread-compositing.html

We should not allow RenderNamedFlowThread layers to be composited, rather their collected children should checked
for compositing through their associated RenderRegions.

The assert in RenderGeometryMap::mapToContainer was hit because after https://bugs.webkit.org/show_bug.cgi?id=117270
the render named flow threads are hooked in RenderView layer tree - with the caveat that they are not directly involved
in hit testing/paint which is done through their associated regions.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::computeCompositingRequirements): Bail out if we hit a render named flow thread layer.
(WebCore::RenderLayerCompositor::rebuildCompositingLayerTree): Ditto.

LayoutTests:

* fast/regions/assert-flow-thread-compositing-expected.txt: Added.
* fast/regions/assert-flow-thread-compositing.html: Added.


Canonical link: https://commits.webkit.org/135622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151396 268f45cc-cd09-0410-ab3c-d52691b4dbfc